--- a/api/package.json
+++ b/api/package.json
@@ -2,8 +2,9 @@
   "name": "restapi4usercenter",
   "version": "1.0.0",
   "description": "REST API que ira fornecer todos os dados necessário para o projeto UserCenter: https://github.com/ericambiel/usercenter",
-  "main": "index.js",
   "scripts": {
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
     "test": "echo \\\"Erro: não há testes especificados\\\" && exit 1"
   },
   "repository": {
@@ -24,15 +25,13 @@
   },
   "homepage": "https://github.com/ericambiel/RestApi4UserCenter#readme",
   "dependencies": {
-    "body-parser": "^1.7.0",
-    "express": "^4.8.7",
-    "jsonwebtoken": "^7.3.0",
-    "moment": "^2.17.1",
-    "moment-timezone": "^0.5.13",
-    "mongoose": "^5.1.1",
-    "morgan": "^1.9.1",
-    "node-uuid": "^1.4.8",
-    "swagger-ui-express": "^2.0.13",
-    "sync-request": "^4.0.2"
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "debug": "^2.6.9",
+    "express": "^4.16.1",
+    "http-errors": "^1.6.3",
+    "jade": "^1.11.0",
+    "mongodb": "^3.3.0",
+    "morgan": "^1.9.1"
   }
 }
