--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
     "mongodb": "^3.3.0",
+    "mongoose": "^5.9.2",
     "morgan": "^1.9.1"
   }
 }
