--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "rest",
     "api",
     "mongodb",
+    "mongoose",
     "usercenter",
     "crud"
   ],
@@ -31,8 +32,11 @@
     "express": "^4.16.1",
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
-    "mongodb": "^3.3.0",
     "mongoose": "^5.9.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "validator": "^12.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
