--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "debug": "^2.6.9",
+    "deepmerge": "^4.2.2",
     "express": "^4.16.1",
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
