Implementando: Conversor JSON

--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "express": "^4.16.1",
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
+    "json-schema-defaults": "^0.4.0",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
     "validator": "^12.2.0"
