--- a/api/package.json
+++ b/api/package.json
@@ -27,17 +27,19 @@
   },
   "homepage": "https://github.com/ericambiel/RestApi4UserCenter#readme",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "^2.6.9",
-    "deepmerge": "^4.2.2",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.16.1",
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
     "json-schema-defaults": "^0.4.0",
-    "mongoose": "^5.9.5",
-    "morgan": "^1.9.1",
+    "mongoose": "^5.9.6",
+    "mongoose-unique-validator": "^2.0.3",
+    "passport-local": "^1.0.0",
     "validator": "^12.2.0"
   },
   "devDependencies": {
