--- a/api/.env.example
+++ b/api/.env.example
@@ -5,3 +5,7 @@ DB_NAME='usercenter-app'
 DB_USER='dev'
 DB_PASSWORD='dev'
 UPLOAD_DIR_CONTARTOS='public/files/contratos'
+# Key used for generate JWT key
+SECRET_JWT='mysecret'
+# Time to expire user JWToken in seconds
+EXPIRE_USER_TIME=120
