--- a/api/package.json
+++ b/api/package.json
@@ -34,11 +34,14 @@
     "debug": "^2.6.9",
     "dotenv-safe": "^8.2.0",
     "express": "^4.16.1",
+    "express-jwt": "^5.3.1",
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
     "json-schema-defaults": "^0.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
     "mongoose-unique-validator": "^2.0.3",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "validator": "^12.2.0"
   },
