Implementado: Autenticação via JWT

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,3 +1,5 @@
+# To use this configurations, do you need to create file .env with the same
+# configuration parameters, or configure a new server with new parameters.
 API_REST_PORT=3000
 DB_HOST='localhost'
 DB_PORT=27017
