--- a/api/.env.example
+++ b/api/.env.example
@@ -1,4 +1,4 @@
-# To use this configurations, do you need to create file .env with the same
+# To use these configurations, do you need to create file .env with the same
 # configuration parameters, or configure a new server with new parameters.
 API_REST_PORT=3000
 DB_HOST='localhost'
@@ -7,7 +7,7 @@ DB_NAME='usercenter-app'
 DB_USER='dev'
 DB_PASSWORD='dev'
 UPLOAD_DIR_CONTARTOS='public/files/contratos'
-# Key used for generate JWT key
+# Key used for generating JWT key.
 SECRET_JWT='mysecret'
 # Time to expire user JWToken in seconds
-EXPIRE_USER_TIME=120
+EXPIRE_USER_TIME=900
