--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "dotenv-safe": "^8.2.0",
     "express": "^4.16.1",
     "express-jwt": "^5.3.1",
+    "express-jwt-permissions": "^1.3.3",
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
     "json-schema-defaults": "^0.4.0",
