--- a/api/package.json
+++ b/api/package.json
@@ -41,6 +41,7 @@
     "json-schema-defaults": "^0.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
+    "mongoose-hidden": "^1.8.1",
     "mongoose-unique-validator": "^2.0.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
