Implementado: Filtros para responsaveis pelo departamento.

--- a/api/.env.example
+++ b/api/.env.example
@@ -9,5 +9,5 @@ DB_PASSWORD='dev'
 UPLOAD_DIR_CONTARTOS='public/files/contratos'
 # Key used for generating JWT key.
 SECRET_JWT='mysecret'
-# Time to expire user JWToken in seconds
-EXPIRE_USER_TIME=900
+# Time to expire user JWToken in seconds, login time.
+EXPIRE_USER_TIME=36000
