Refactor: Alterados nomes das pastas. Implementando: Classe de envio de E-Mail.

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ UPLOAD_DIR_CONTARTOS='public/files/contratos'
 SECRET_JWT='mysecret'
 # Time to expire user JWToken in seconds, login time.
 EXPIRE_USER_TIME=36000
+
+## Configs e-mail sender ##
+MAIL_HOST='smtp.mailtrap.io'
+MAIL_PORT=2525
+MAIL_USER='d24e71990b9660'
+MAIL_PASSWORD='0a77ef8866a742'
