--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "REST API que ira fornecer todos os dados necessário para o projeto UserCenter: https://github.com/ericambiel/usercenter",
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
-    "debug": "nodemon --inspect ./bin/www",
+    "start": "node ./api/app/bin/www",
+    "dev": "nodemon ./api/app/bin/www",
+    "debug": "nodemon --inspect ./api/app/bin/www",
     "test": "echo \\\"Erro: não há testes especificados\\\" && exit 1"
   },
   "repository": {
@@ -34,6 +34,7 @@
     "debug": "^2.6.9",
     "dotenv-safe": "^8.2.0",
     "express": "^4.16.1",
+    "express-handlebars": "^4.0.3",
     "express-jwt": "^5.3.1",
     "express-jwt-permissions": "^1.3.3",
     "http-errors": "^1.6.3",
@@ -43,6 +44,8 @@
     "mongoose": "^5.9.6",
     "mongoose-hidden": "^1.8.1",
     "mongoose-unique-validator": "^2.0.3",
+    "nodemailer": "^6.4.6",
+    "nodemailer-express-handlebars": "^4.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "validator": "^12.2.0"
