Implementando: E-Mail padrão para envio de contratos vencidos.

--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,12 @@ EXPIRE_USER_TIME=36000
 ## Configs e-mail sender ##
 MAIL_HOST='smtp.mailtrap.io'
 MAIL_PORT=2525
-MAIL_USER='d24e71990b9660'
-MAIL_PASSWORD='0a77ef8866a742'
+# true for 465, false for other ports
+MAIL_SECURE=false
+MAIL_USER='your_user_email_here'
+MAIL_PASSWORD='your_password_email_here'
+
+## Your company's information. ## 
+COMPANY_NAME='Name of your company'
+COMPANY_SITE='http://www.yourcompany.com'
+COMPANY_LOGO='http://www.yourcompany.com/logo.png'
