--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "debug": "^2.6.9",
     "dotenv-safe": "^8.2.0",
     "express": "^4.16.1",
