Implementado: Configurações MongoDB Implementado: Campo virtual id resumido para contrato Refatorado: Alguns trechos de controller para envio de email

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ MAIL_PORT=2525
 MAIL_SECURE=false
 MAIL_USER='your_user_email_here'
 MAIL_PASSWORD='your_password_email_here'
+MAIL_SEND_AS_NAME='send_as_my_name'
+MAIL_SEND_AS_EMAIL='send_email_as@business.com'
+MAIL_SEND_TO='email_to_send_to@business.com'
 
 ## Your company's information. ## 
 COMPANY_NAME='Name of your company'
