Implementando: Impressão ZPL Ativo.

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,7 @@ MAIL_SEND_TO='email_to_send_to@business.com'
 COMPANY_NAME='Name of your company'
 COMPANY_SITE='http://www.yourcompany.com'
 COMPANY_LOGO='http://www.yourcompany.com/logo.png'
+
+## PRINTER ###
+ZPL_PRINTER='NAME_OF_PRINTER_ZPL_INSTALLED_ON_SYSTEM'
+ZPL_LOGO='ZPL_CODE_LOGO_WITHOUT_^GF_^FS'
