Refatorado:  - Menssagens de resposta ao frontend

--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
   "pkg": {
     "assets": [
       "node_modules/**",
-      "api/views/**"
+      "api/views/**",
+      "api/public/**"
     ],
     "targets": [
       "node13"
