--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ DB_PORT=27017
 DB_NAME='usercenter-app'
 DB_USER='dev'
 DB_PASSWORD='dev'
-UPLOAD_DIR_CONTARTOS='public/files/contratos'
+UPLOAD_DIR_CONTRATOS='public/files/contratos'
 # Key used for generating JWT key.
 SECRET_JWT='mysecret'
 # Time to expire user JWToken in seconds, login time.
