Refatorado:  - Arquivo templete ZPL sendo carregado de fora da aplicação.

--- a/.env.example
+++ b/.env.example
@@ -30,4 +30,5 @@ COMPANY_LOGO='http://www.yourcompany.com/logo.png'
 
 ## PRINTER ###
 ZPL_PRINTER='NAME_OF_PRINTER_ZPL_INSTALLED_ON_SYSTEM'
+ZPL_TEMPLETE_ASSET='public/zpl/asset_templete.zpl'
 ZPL_LOGO='ZPL_CODE_LOGO_WITHOUT_^GF_^FS'
