Implementado: Login via LDAP para servidores AD

--- a/.env.example
+++ b/.env.example
@@ -38,5 +38,7 @@ LDAP_SERVER='ldap://IP_OR_DOMAIN_NAME_TO_LDAP_SERVER'
 LDAP_PORT=389
 LDAP_USER='USER@DOMAIN_NAME.SUB_DOMAIN_NAME'
 LDAP_PASSWORD='USER_PASSWORD'
-# Example to start point 'dc=domain_name_company,dc=sub_domain_name_company' 
+# Used for request in LDAP server.
+LDAP_DN_FOR_USERS='dc=domain_name_company,dc=sub_domain_name_company'
+# Example to start point 'dc=domain_name_company,dc=sub_domain_name_company, don't use spaces'
 LDAP_START_POINT='START_POINT_TO_REQUEST_IN_AD'
