--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/ericambiel/RestApi4UserCenter#readme",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "binary": "^0.3.0",
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
